Fixed font declaration that was causing problems on Firefox

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -1352,7 +1352,7 @@ li.search-result.members{
 
 .profile-right h3{
     margin: 0 0 5px 0;
-    font: 17px bold "TradeGothicW01-BoldCn20 675334", "Arial Narrow", sans-serif;
+    font: bold 17px "TradeGothicW01-BoldCn20 675334", "Arial Narrow", sans-serif;
     font-weight: bold;
     color: #999999;
 }
